fixed overflow scrolling, renamed functions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,3 +128,12 @@ img:hover {
   opacity: 1;
   transition: opacity 0.25s cubic-bezier(0.39, 0.575, 0.565, 1);
 }
+
+.nodisplay::-webkit-scrollbar {
+  display: none;
+}
+
+.nodisplay {
+  -ms-overflow-style: none;
+  scrollbar-width: none; 
+}
